# virtualizeBg.py

./: .gitignore  LICENSE  Makefile  README.md  backgorund.py  process.py  pyproject.toml  pyvirtualbackground.py  requirements.txt  segmentor.py
.github/workflows/: python-package.yml
test/: test.py  transformer.py
virtualbackground_bozkayasalihx/: segmentor.py
